--- a/openlane/user_proj_example/config.json
+++ b/openlane/user_proj_example/config.json
@@ -2,11 +2,11 @@
     "PDK"                      : "sky130A",
     "STD_CELL_LIBRARY"         : "sky130_fd_sc_hd",
     "CARAVEL_ROOT"             : "../../caravel",
-    "CLOCK_NET"                : "counter.clk",
+    "CLOCK_NET"                : "cordic.clk",
     "CLOCK_PERIOD"             : "10",
     "CLOCK_PORT"               : "wb_clk_i",
     "DESIGN_IS_CORE"           : "0",
-    "DESIGN_NAME"              : "user_proj_example",
+    "DESIGN_NAME"              : "cordic",
     "DIE_AREA"                 : "0 0 900 600",
     "DIODE_INSERTION_STRATEGY" : "4",
     "FP_PIN_ORDER_CFG"         : "pin_order.cfg",
@@ -17,5 +17,5 @@
     "PL_TARGET_DENSITY"        : "0.05",
     "RUN_CVC"                  : "1",
     "VDD_NETS"                 : "vccd1",
-    "VERILOG_FILES"            : ["../../caravel/verilog/rtl/defines.v", "../../verilog/rtl/user_proj_example.v"]
+    "VERILOG_FILES"            : ["../../caravel/verilog/rtl/defines.v","../../verilog/rtl/cordic.v","../../verilog/rtl/fsm.v","../../verilog/rtl/ROM.v","../../verilog/rtl/Full_Adder_Ctrl.v","../../verilog/rtl/shift.v","../../verilog/rtl/Eta_Adder16.v","../../verilog/rtl/Full_Adder.v"]
 }
