--- a/openlane/user_proj_example/config.json
+++ b/openlane/user_proj_example/config.json
@@ -17,5 +17,5 @@
     "PL_TARGET_DENSITY"        : "0.05",
     "RUN_CVC"                  : "1",
     "VDD_NETS"                 : "vccd1",
-    "VERILOG_FILES"            : ["../../caravel/verilog/rtl/defines.v","../../verilog/rtl/cordic.v","../../verilog/rtl/fsm.v","../../verilog/rtl/ROM.v","../../verilog/rtl/Full_Adder_Ctrl.v","../../verilog/rtl/shift.v","../../verilog/rtl/Eta_Adder16.v","../../verilog/rtl/Full_Adder.v"]
+    "VERILOG_FILES"            : ["../../caravel/verilog/rtl/defines.v","../../verilog/rtl/cordic.v"]
 }
